# ChangeLog for games-emulation/osmose
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  -files/osmose-0.8.5b-gcc43.patch, -files/osmose-0.9.0b-makefile.patch,
  -files/osmose-makefile.patch:
  Pruned old patches.

  16 Dec 2009; Michał Ziąbkowski <mziab@o2.pl> -osmose-0.8.5b.ebuild,
  -osmose-0.9.0b.ebuild, osmose-0.9.1.ebuild, osmose-0.9.2.ebuild:
  Removed cruft. Also, it seems the gui was dropped, so let's remove the
  desktop entry.

  11 Dec 2009; Michał Ziąbkowski <mziab@o2.pl> +osmose-0.9.2.ebuild,
  +files/osmose-0.9.2-makefile.patch:
  Bumped.

  06 Nov 2009; Michał Ziąbkowski <mziab@o2.pl>
  files/osmose-0.9.1-makefile.patch:
  Updated patch to fix parallel make warning.

  06 Nov 2009; Michał Ziąbkowski <mziab@o2.pl> +osmose-0.9.1.ebuild,
  +files/osmose-0.9.1-makefile.patch:
  Bumped.

  12 May 2009; Michał Ziąbkowski <mziab@o2.pl> osmose-0.9.0b.ebuild:
  Might as well add a desktop entry while I'm at it.

  12 May 2009; Michał Ziąbkowski <mziab@o2.pl> +osmose-0.9.0b.ebuild,
  +files/osmose-0.9.0b-makefile.patch:
  Bumped with new Makefile patch.

  17 Feb 2009; Michał Ziąbkowski <mziab@o2.pl> osmose-0.8.5b.ebuild:
  Fixed libsdl dep.

  19 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> osmose-0.8.5b.ebuild:
  Added missing homepage.

  16 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> osmose-0.8.5b.ebuild:
  Added ~amd64 keyword.

  16 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> osmose-0.8.5b.ebuild,
  +files/osmose-0.8.5b-gcc43.patch, +files/osmose-makefile.patch:
  Fixed parallel make. Replaced sed with patch. Added gcc-4.3 compilation fix.

  16 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> osmose-0.8.5b.ebuild:
  Fixed sdl dep.

  16 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> +osmose-0.8.5b.ebuild:
  Initial ebuild.
