@@ -2,7 +2,7 @@ AUX osmose-0.9.1-makefile.patch 851 RMD160 a26065f511c1aa5afb608609de23c63f17ac6
 AUX osmose-0.9.2-makefile.patch 860 RMD160 54f95c5774807a953ce55a5ce788b1fddeb033d8 SHA1 0e9090c63124b19a8c9882a8f4586b89aa8384d2 SHA256 86924d47798d4edbe7010f498c9d8fd235e4a891e9a6a17c2eb5b46a9b79bc54
 DIST Osmose-0-9-1-src.zip 155822 RMD160 4126c9b9f92f2c3c0cda4a1f7b0faa4aa96ee358 SHA1 ee815cc8af86adaa95dc4ec28b3f7c5d013e0ac6 SHA256 993acc7daefd91a6677d663ec1230d64f63287c4c734c503c31cff010b1483d1
 DIST Osmose-0-9-2-src.zip 157522 RMD160 aa5f255760f616c5160b86715c15a17172a76281 SHA1 1f9ad7e4e58c9e23c653ae66b5faf3b86f16c99c SHA256 c00c4c931ce64e465c379d7ddd841fc21417dba7fe63cc35964c9c1d32c8346d
-EBUILD osmose-0.9.1.ebuild 696 RMD160 d41fd248616341a672626310a4b63e25227d4cd4 SHA1 ed2f3d09124df0bc2174608314f27be6d6a73df8 SHA256 29e2fe66ba77b66c27fae85153b39e313961ab24603a857586b82fa44d351234
-EBUILD osmose-0.9.2.ebuild 696 RMD160 d41fd248616341a672626310a4b63e25227d4cd4 SHA1 ed2f3d09124df0bc2174608314f27be6d6a73df8 SHA256 29e2fe66ba77b66c27fae85153b39e313961ab24603a857586b82fa44d351234
-MISC ChangeLog 1857 RMD160 912750dcea84e265f3b7309d4a5608714d84dbe4 SHA1 5af4614702261a47a03a3b6e5f33efd7d8c4ba05 SHA256 c8bb0d26ead5ea0e419d38bb5ce6a48a374269bf9568a9637ce5bece2122e399
+EBUILD osmose-0.9.1.ebuild 684 RMD160 bd0ff3393b82c1713fbe06cfda5538d53702f28a SHA1 290a36468d0728dd930f563475c0c9397d949851 SHA256 0c029d6cc1c6ad3c302882cb74fe1ed7ed1304e99d13c0854082e7756626c4e3
+EBUILD osmose-0.9.2.ebuild 684 RMD160 bd0ff3393b82c1713fbe06cfda5538d53702f28a SHA1 290a36468d0728dd930f563475c0c9397d949851 SHA256 0c029d6cc1c6ad3c302882cb74fe1ed7ed1304e99d13c0854082e7756626c4e3
+MISC ChangeLog 1983 RMD160 9f7925d314fbcb3f9ce45a482094b2af1168de5d SHA1 3986d553ef045407db5a6131ce6212b2601b7567 SHA256 5b6401ea88ad6cbba2fe695c8f6095d2f138c5a21fca18c7779c1cd425ee3b9d
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
