@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> osmose-0.9.1.ebuild,
+  osmose-0.9.2.ebuild:
+  Applied SpanKY's suggestions.
+
   20 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
   -files/osmose-0.8.5b-gcc43.patch, -files/osmose-0.9.0b-makefile.patch,
   -files/osmose-makefile.patch:
